--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.lijian.binderdemo.MainActivity">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:orientation="vertical">
 
-</android.support.constraint.ConstraintLayout>
+        <Button
+            android:id="@+id/btn_add_task"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="添加下载任务" />
+
+        <TextView
+            android:id="@+id/tv_add_task_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="添加一个任务" />
+
+        <Button
+            android:id="@+id/btn_get_tasks"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="获取所有的下载任务" />
+
+        <TextView
+            android:id="@+id/tv_tasks_info"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="当前下载的所有任务" />
+    </LinearLayout>
+
+</ScrollView>
