--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,12 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/btn_unregister_listener"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="取消任务监听" />
+
+        <Button
             android:id="@+id/btn_add_task"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
